--- a/styles/1-globals/extensions.sass
+++ b/styles/1-globals/extensions.sass
@@ -1,3 +1,5 @@
+@use "variables"
+
 %columnFlex 
   display: inline-flex
   justify-content: center
@@ -27,3 +29,7 @@
   display: inline-flex
   justify-content: space-between
   align-items: center
+
+%stickyShrinkHover
+  background-color: variables.$grey
+  box-shadow: inset 0 2px 0 variables.$cream, inset 0 -2px 0 variables.$cream
