--- a/styles/2-containers/footer.module.sass
+++ b/styles/2-containers/footer.module.sass
@@ -5,8 +5,7 @@
   @extend %rowFlex
   min-width: 100vw
   height: variables.$footerHeight
-  border-top: solid 5px variables.$purple
-  border-bottom: solid 5px variables.$purple
+  box-shadow: inset 0 5px 0 variables.$purple, inset 0 -5px 0 variables.$purple
 
 
 .socialIcons 
