--- a/styles/2-containers/header.module.sass
+++ b/styles/2-containers/header.module.sass
@@ -35,9 +35,15 @@
 
 
 .stickyShrink .highlight 
-  border-top: solid variables.$cream
-  border-bottom: solid variables.$cream
+  box-shadow: inset 0 2px 0 variables.$cream, inset 0 -2px 0 variables.$cream
 
+header.stickyShrink > div a:hover
+  @extend %stickyShrinkHover
+
+header.normal > div a:hover 
+  background-color: variables.$purple
+  color: variables.$cream
+  border-radius: 5px
 
 @media (max-width: variables.$headerTransitionWidth) 
   #hamburger 
