--- a/styles/2-containers/portfolioProject.module.sass
+++ b/styles/2-containers/portfolioProject.module.sass
@@ -52,6 +52,9 @@
   width: 100%
   @extend %columnFlex
 
+#projectDescription > a:hover
+  @extend %stickyShrinkHover
+
 #technologyList 
   text-align: center
   font-size: 1.2em
